<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPT Controller</string>
    <string name="menu_settings">Setting</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="jump">Jump</string>
    <string name="zoomin">Blank Screen</string>
    <string name="zoomout">Make White</string>
    <string name="slideno">Slide No:</string>
    <string name="closePPT">Close</string>
    <string name="currentslide">Slide Show From Current Slide</string>
    <string name="connect">Connect</string>
    <string name="ip_hint">IP Adress</string>
    <string name="alert_connect_failed">connect failed,please check pc and network!</string>
    <string name="alert_not_ip_address">It\'s not ip address</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth_first">BluetoothFirst</string>
    <string name="title_activity_bluetooth_devices">BluetoothDevices</string>
    <string name="title_activity_bluetooth_command_serivce">BluetoothCommandSerivce</string>

</resources>