<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.deepu.mypptcontroller.client.bluetoothconnectivity.BluetoothCommandSerivce">
    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/previous"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/previous"
        android:layout_alignTop="@+id/next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/stop"
        android:layout_toStartOf="@+id/stop" />

    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:layout_below="@+id/center"
        android:layout_toRightOf="@+id/stop"
        android:layout_toEndOf="@+id/stop"
        android:layout_marginTop="39dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoomin"
        android:id="@+id/zoomIn"
        android:layout_above="@+id/center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoomout"
        android:id="@+id/zoomOut"
        android:layout_above="@+id/center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/slideno"
        android:id="@+id/textView"
        android:layout_above="@+id/zoomIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:textSize="23sp"
        android:textIsSelectable="false"
        android:textColor="#ff1b2bff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSlideNo"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/start"
        android:layout_alignEnd="@+id/start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump"
        android:id="@+id/jump"
        android:layout_alignBottom="@+id/editTextSlideNo"
        android:layout_toRightOf="@+id/editTextSlideNo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentslide"
        android:id="@+id/currentSlide"
        android:layout_above="@+id/stop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closePPT"
        android:id="@+id/close"
        android:layout_alignBottom="@+id/start"
        android:layout_alignRight="@+id/jump"
        android:layout_alignEnd="@+id/jump" />


</RelativeLayout>
